--- a/DotNetBootstrapper/DotNetBootstrapper.vcxproj
+++ b/DotNetBootstrapper/DotNetBootstrapper.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{0FD1B168-73DE-4EE2-BA14-CA4E3C577B0E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>DotNetBootstrapper</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -25,7 +26,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
